--- a/style.css
+++ b/style.css
@@ -15,15 +15,16 @@ body {
 }
 
 h1 {
-  font-size: 1.4rem; 
+  font-size: 1.4rem !important; 
   margin-bottom: 20px;
 }
 
 p strong {
- font-size: 2rem;
+  font-size: 2rem !important; 
   color: #2c3e50;
   font-weight: bold;
 }
+
 
 form {
   margin-bottom: 20px;
